# KDE-System76-Power

./: CMakeLists.txt
plasmoid/: metadata.json
plasmoid/contents/ui/: main.qml
plugin/: CMakeLists.txt
